7036960: TemplateTable::fast_aldc in templateTable_x86_64.cpp uses movptr instead of load_klass

Reviewed-by: kvn, iveresov